# quantzoo

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  PR_BODY.md  README.md  README_ADDITIONS.md  REALTIME_DEMO.md  TECHNICAL_REPORT.md  create_crossover_test.py  create_extended_data.py  create_news_data.py  create_test_data.py  crossover_test_data.csv  debug_fees.py  debug_one_bar.py  debug_strategy.py  pr_checklist.md  pyproject.toml  test_direct_backtest.py  test_pullback_data.csv  validate_framework.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/backtest_dashboard/: app.py
apps/space_app/: README.md  requirements.txt
apps/streamlit_app/: app.py  requirements.txt
artifacts/: .gitkeep
configs/: example_transformer.yaml  mnq_808.yaml  momentum.yaml  pairs.yaml  portfolio_example.yaml  regime_hybrid_conservative.yaml  regime_hybrid_tfidf.yaml  test_crossover.yaml  test_crossover_2025.yaml  vol_breakout.yaml
docker/: Dockerfile.inference
docs/: DATA.md  EXAMPLES.md  METHODS.md  METRICS.md  model_card_template.md
examples/: README.md  portfolio_demo.py  realtime_demo.py
ml/: evaluate.py  train_transformer.py
model_cards/: README.md  mnq_808.md  regime_hybrid.md
notebooks/: hybrid_demo.ipynb
ops/: RUNBOOK.md  docker-compose.monitor.yml  prometheus.yml
quantzoo/: __init__.py
scripts/: generate_production_features.sh  generate_sample_data.py
services/: safety_api.py
tests/: test_api_realtime.py  test_brokers.py  test_fees_slippage.py  test_ml_no_lookahead.py  test_no_lookahead.py  test_one_bar_adverse.py  test_plot_candles.py  test_position_math.py  test_realtime.py  test_risk_metrics.py  test_store.py  test_strategies_indicators.py  test_walkforward.py
tools/: export_leaderboard.py
validation/: validation_report.md  validation_results.json
(+42 files in other folders)
